# ControladorAeropuerto2

./: CMakeLists.txt  Reportes.cpp  Reportes.h  aviones.txt  main.cpp  pasajeros.json
Estructura/: Cola.cpp  Cola.h  ListaCircularDoble.cpp  ListaCircularDoble.h  ListaDoblementeEnlazada.cpp  ListaDoblementeEnlazada.h  Nodo.cpp  Nodo.h  Pila.cpp  Pila.h
Objetos/: Avion.cpp  Avion.h  Equipaje.cpp  Equipaje.h  Pasajero.cpp  Pasajero.h
